# verusos-mvp

./: README.md  generate_test_set.py  pyproject.toml  replit.md  test_runner.py  test_set_v1.csv
app/: __init__.py  main.py
app/api/: company.py  dashboard.py  detection.py  export.py  protocol.py  review.py  schemas.py
app/core/: config.py  database.py  detection.py
app/models/: database.py
app/services/: boundary_engine.py  crisis_detection.py  export_service.py  protocol_generator.py  (+3 more)
attached_assets/: Pasted--After-you-calculate-risk-score-and-risk-tier-add-this-_1764973659254.txt  Pasted--Enhanced-Crisis-Detection-Engine-v1-0-Implements-compr_1765308945315.txt  Pasted--Safety-Prompt-Recommendations-Provides-risk-aligned-pr_1764956924207.txt  Pasted--VerusOS-Detection-Engine-v2-0-COMPLETE-Comprehensive-s_1765309425537.txt  Pasted--VerusOS-Lite-MVP-Technical-Architecture-What-We-re-Act_1764943306135.txt  Pasted-Add-to-Dashboard-CSS-css-protocol-generator-section-mar_1764964143861.txt  Pasted-FILE-app-api-protocol-py-Create-new-file-app-api-protoc_1764963968422.txt  Pasted-FILE-app-services-protocol-generator-py-Create-new-file_1764963947452.txt  Pasted-FILE-database-migrations-003-add-compliance-reviews-sql_1764971468266.txt  Pasted-PART-3-Dashboard-UI-Review-Modal-HTML-Add-to-your-dashb_1764971486236.txt  Pasted-PART-4-Dashboard-CSS-Add-to-your-dashboard-CSS-file-css_1764971597562.txt  Pasted-STEP-1-Tell-Replit-Agent-to-Add-Prompt-Logic-Copy-paste_1764973639025.txt  Pasted-Update-the-api-v1-detect-endpoint-to-include-safety-pro_1764972945240.txt
(+3 files in other folders)
